Name:                dsh-sql
Version:             0.3.0.1
Synopsis:            SQL backend for Database Supported Haskell (DSH)
Description:
  This package provides an SQL backend for Database Supported Haskell
  (DSH). It provides the ability to generate SQL code and execute DSH
  queries on supported SQL database engines. Currently, only
  PostgreSQL is supported.

License:             BSD3
License-file:        LICENSE
Author:              Alexander Ulrich
Maintainer:          alex@etc-network.de
Stability:           Experimental
Category:            Database
Build-type:          Simple

Extra-source-files:  README.md

Cabal-version:       >= 1.10

Flag debuggraph
  Description: Print debugging information for graph rewrites (TA)
  Default:     False

Library
  default-language:    Haskell2010
  Build-depends:
                       DSH                >= 0.13
                     , random             >= 1.1
                     , process            >= 1.2
                     , Decimal            >= 0.4
                     , HDBC               >= 2.4.0.1
                     , HDBC-odbc          >= 2.4
                     , aeson              >= 0.11
                     , algebra-dag        >= 0.1
                     , algebra-sql        >= 0.3
                     , base               >= 4.8 && < 5
                     , bytestring         >= 0.10
                     , bytestring-lexing  >= 0.5
                     , containers         >= 0.5
                     , either             >= 4.0
                     , mtl                >= 2.1
                     , semigroups         >= 0.18
                     , set-monad          >= 0.1
                     , template-haskell   >= 2.9
                     , text               >= 1.1
                     , vector             >= 0.10
                     , scientific         >= 0.3
                     , time               >= 1.5
                     , deepseq            >= 1.4
                     , ansi-wl-pprint     >= 0.6.7.2
                     , dlist              >= 0.8

  Hs-source-dirs:    src

  if flag(debuggraph)
    CPP-Options:     -DDEBUGGRAPH

  GHC-Options:       -Wall -fno-warn-orphans

  Exposed-modules:   Database.DSH.Backend.Sql

  Other-modules:
                     Database.DSH.Backend.Sql.Opt.Properties.BottomUp
                     Database.DSH.Backend.Sql.Opt.Properties.TopDown
                     Database.DSH.Backend.Sql.Opt.Properties.Types
                     Database.DSH.Backend.Sql.Opt.Properties.Nullable
                     Database.DSH.Backend.Sql.Opt.Properties.FD
                     Database.DSH.Backend.Sql.Opt.Properties.ICols
                     Database.DSH.Backend.Sql.Opt.Properties.Auxiliary
                     Database.DSH.Backend.Sql.Opt.Properties.Empty
                     Database.DSH.Backend.Sql.Opt.Properties.Card1
                     Database.DSH.Backend.Sql.Opt.Properties.Keys
                     Database.DSH.Backend.Sql.Opt.Properties.Order
                     Database.DSH.Backend.Sql.Opt.Properties.Const
                     Database.DSH.Backend.Sql.Opt.Rewrite.Basic
                     Database.DSH.Backend.Sql.Opt.Rewrite.Expr
                     Database.DSH.Backend.Sql.Opt.Rewrite.Common
                     Database.DSH.Backend.Sql.Opt

                     Database.DSH.Backend.Sql.Unordered
                     Database.DSH.Backend.Sql.Unordered.Natural

                     Database.DSH.Backend.Sql.Vector
                     Database.DSH.Backend.Sql.Serialize

                     -- Database.DSH.Backend.Sql.Relational.Natural
                     -- Database.DSH.Backend.Sql.Relational.Synthetic
                     -- Database.DSH.Backend.Sql.Relational.Virtual
                     -- Database.DSH.Backend.Sql.Relational.Common
                     -- Database.DSH.Backend.Sql.Relational

                     Database.DSH.Backend.Sql.Pg
                     Database.DSH.Backend.Sql.M5
                     Database.DSH.Backend.Sql.CodeGen
                     Database.DSH.Backend.Sql.Common
                     Database.DSH.Backend.Sql.HDBC

                     Database.DSH.Backend.Sql.MultisetAlgebra
                     Database.DSH.Backend.Sql.MultisetAlgebra.Lang
                     Database.DSH.Backend.Sql.MultisetAlgebra.FlatRecords
                     Database.DSH.Backend.Sql.MultisetAlgebra.Typing
                     Database.DSH.Backend.Sql.MultisetAlgebra.Dot
                     Database.DSH.Backend.Sql.MultisetAlgebra.Opt
                     Database.DSH.Backend.Sql.MultisetAlgebra.Opt.Rewrite

executable madot
    Main-is: Database/DSH/Backend/Sql/MultisetAlgebra/DotGen.hs
    default-language:    Haskell2010
    GHC-Options:      -Wall -fno-warn-orphans
    hs-source-dirs:   src
    build-depends:    base               >= 4.8 && < 5,
                      mtl                >= 2.1,
                      containers         >= 0.5,
                      template-haskell   >= 2.9,
                      -- pretty             >= 1.1,
                      fgl                >= 5.5,
                      -- transformers       >= 0.3,
                      -- parsec             >= 3.1,
                      -- ghc-prim           >= 0.3,
                      bytestring         >= 0.10,
                      aeson              >= 0.11,
                      Decimal            >= 0.4,
                      time               >= 1.4,
                      text               >= 1.2,
                      scientific         >= 0.3,
                      algebra-dag        >= 0.1,
                      ansi-wl-pprint     >= 0.6.7.2,
                      DSH                >= 0.13
    other-extensions: TemplateHaskell
    other-modules:    Database.DSH.Backend.Sql.MultisetAlgebra.Lang
                      Database.DSH.Backend.Sql.MultisetAlgebra.Dot

-- Executable flatsqlcomp
--     default-language:    Haskell2010
--     Hs-Source-Dirs: flatsqlcomp
--     Main-is:        Main.hs
--     Build-depends:  base >= 4.8 && < 5,
--                     DSH >= 0.13,
--                     dsh-sql >= 0.2,
--                     aeson >= 0.11,
--                     bytestring >= 0.10,
--                     deepseq                    >= 1.4
--     GHC-Options: -Wall

-- Executable test-basic
--     default-language:    Haskell2010
--     Hs-Source-Dirs : testsuite
--     Main-is:       TestBasic.hs
--     Build-depends:
--                      DSH                        >= 0.13
--                    , HDBC                       >= 2.4.0.1
--                    , HDBC-odbc                  >= 2.4
--                    , HUnit                      >= 1.2
--                    , QuickCheck                 >= 2.4
--                    , base                       >= 4.8 && < 5
--                    , bytestring                 >= 0.10
--                    , bytestring-lexing          >= 0.4
--                    , containers                 >= 0.5
--                    , dsh-sql                    >= 0.1
--                    , tasty                      >= 0.11
--                    , tasty-hunit                >= 0.9
--                    , tasty-quickcheck           >= 0.8
--                    , text                       >= 1.1
--                    , vector                     >= 0.10
--                    , deepseq                    >= 1.4
--     GHC-Options: -Wall -fno-warn-orphans
--     default-extensions: CPP

-- executable test-tpch
--   default-language:    Haskell2010
--   main-is:             testsuite/TestTPCH.hs
--   build-depends:       base,
--                        containers,
--                        mwc-random,
--                        vector,
--                        cassava,
--                        bytestring,
--                        time,
--                        text,
--                        Decimal,
--                        semigroups,
--                        HUnit,
--                        HDBC,
--                        HDBC-odbc,
--                        tasty,
--                        tasty-hunit,
--                        DSH,
--                        dsh-sql,
--                        dsh-example-queries
--   ghc-options:         -Wall -O2

-- executable bench-tpch
--   default-language:    Haskell2010
--   main-is:             bench/BenchTPCH.hs
--   build-depends:       base,
--                        containers,
--                        mwc-random,
--                        vector,
--                        cassava,
--                        bytestring,
--                        time,
--                        text,
--                        Decimal,
--                        semigroups,
--                        criterion,
--                        HDBC,
--                        HDBC-odbc,
--                        deepseq,
--                        DSH,
--                        dsh-sql,
--                        dsh-example-queries
--   ghc-options:         -Wall -O2

-- executable bench-micro
--   default-language:    Haskell2010
--   main-is:             bench/BenchMicro.hs
--   build-depends:       base,
--                        containers,
--                        mwc-random,
--                        vector,
--                        cassava,
--                        bytestring,
--                        time,
--                        text,
--                        Decimal,
--                        semigroups,
--                        criterion,
--                        HDBC,
--                        HDBC-odbc,
--                        deepseq,
--                        DSH,
--                        dsh-sql
--   ghc-options:         -Wall -O2

-- executable runpg
--   default-language:    Haskell2010
--   main-is:             RunPg.hs
--   build-depends:       base,
--                        HDBC,
--                        HDBC-odbc,
--                        DSH,
--                        dsh-sql,
--                        dsh-example-queries
--   ghc-options:         -Wall -O2

source-repository head
    type:     git
    location: https://github.com/ulricha/dsh-sql
